fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ footer {
   font-weight: 500;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 footer a {
